2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (struct packageinlist): Rename to ...
	(struct pkg_deconf_list): ... this. Fix all users.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (struct packageinlist): Change 'void *xinfo' member to
	'struct pkginfo *pkg_removal'. Fix all users.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (ignoredependss): Change type to 'struct pkginqueue'.
	* src/main.c (ignoredependss): Likewise.
	(ignoredepends): Change type for variable 'ni' to 'struct pkginqueue'.
	* src/help.c (ignore_depends): Likewise.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/query.c (ignoredependss): Remove unused variable.

2008-07-10  Raphael Hertzog  <hertzog@debian.org>

	* man/dpkg-buildpackage.1: Give a detailed explanation of what the
	command does. Drop any duplicate information contained in the
	dpkg-genchanges/dpkg-source manual pages.
	* man/dpkg-genchanges.1: Document the -A option (was missing).

2008-07-10  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-priv.h (min, max): New macros.
	* lib/tarfn.c: Include <dpkg-priv.h>.
	* src/configure.c: Likewise.
	* src/enquiry.c: Likewise.

	* src/configure.c (conffderef): Use max instead of hardcoded test.
	* lib/tarfn.c (TarExtractor): Use min instead of hardcoded test.
	* lib/fields.c (conffvalue_lastword): Likewise.
	* src/enquiry.c (limiteddescription): Likewise.
	* src/main.c (setforce): Likewise.
	* src/query.c (limiteddescription): Likewise.

2008-07-10  Guillem Jover  <guillem@debian.org>,
            Timothy G Abbott  <tabbott@mega-man.mit.edu>

	* src/configure.c (deferred_configure): Call namenodetouse to handle
	diverted conffiles. Use trig_file_activate on usenode, instead of
	trig_file_activate_byname, to activate the correct file trigger for
	the diverted conffile.

2008-07-06  Guillem Jover  <guillem@debian.org>

	* src/main.h: Remove comment about side effect in namenodetouse.