@@ -1,5 +1,10 @@
 2008-07-22  Guillem Jover  <guillem@debian.org>
 
+	* src/main.h (struct pkg_deconf_list): Move declaration ...
+	* src/archives.h: ... here.
+
+2008-07-22  Guillem Jover  <guillem@debian.org>
+
 	* src/main.h (struct packageinlist): Rename to ...
 	(struct pkg_deconf_list): ... this. Fix all users.
 
